--- a/pg.html
+++ b/pg.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<h1>Bsc. CSIT 2073 First semester</h1>
+<h1>Bsc. CSIT 2073 Second semester</h1>
 <h2>Riwaj Chalise</h2>
 <h3>0299624</h3>
 
